Fix spacing on navbar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,7 +20,6 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 0 15px;
 }
   
 .main-title {
